2006-06-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/animationplay.c
	* plug-ins/common/colormap-remap.c
	* plug-ins/common/gbr.c
	* plug-ins/common/gih.c
	* plug-ins/common/gnomeprint.c
	* plug-ins/common/mail.c
	* plug-ins/common/pat.c
	* plug-ins/common/plugin-browser.c
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/screenshot.c
	* plug-ins/common/uniteditor.c
	* plug-ins/metadata/metadata.c
	* plug-ins/print/print.c
	* plug-ins/uri/uri.c: cast stock-ids passed to
	gimp_plugin_icon_register() to (const guint8 *).

2006-06-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/vinvert.c (run): more cleanup by Mukund, cleaned
	up again by myself.

2006-06-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_get_tab_widget): put
	the event box' event window above its children because now that it
	is input-only, it won't receive events that are not in its
	childrens' event mask if the event window is below.
	Fixes bug #345137.

2006-06-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image):
	always call gtk_file_chooser_set_current_folder_uri() and
	gtk_file_chooser_set_current_name() instead of
	gtk_file_chooser_set_uri(), since the latter only works if the
	file exists and its return value is bogus. Fixes bug #343284.

2006-06-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpview.c: fixed casts to silence compiler warnings.

2006-06-16  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): moved
	variables to local scopes.

2006-06-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/xbm.c: increased the max length for the
	identifier prefix from 24 to 64 chars. I have no idea if this
	violates any spec or produces identifiers too long for stone age C
	standards, but 24 did truncate the identifiers in the newly added
	edge and corner cursors.

2006-06-16  Michael Natterer  <mitch@gimp.org>
